@@ -1041,7 +1041,7 @@ public class QuestMasterHandler
 		{
 			try
 			{
-				quest.newInstance();
+				quest.getDeclaredConstructor().newInstance();
 			}
 			catch (Exception e)
 			{
